--- a/docs/package.json
+++ b/docs/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gitbook build ./ ./docs",
-    "push": "git add . && git commit -m \"update\" && git push origin master"
+    "push": "git add . && git commit -m \"update\" && git push origin master",
+    "switch": "git branch -D gh-pages && git checkout -b ph-pages"
   },
   "repository": {
     "type": "git",
