--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gitbook build ./ ./docs",
     "push": "git add . && git commit -m \"update\" && git push origin master",
+    "del": "git branch gh-pages && git branch -D gh-pages && git checkout -b gh-pages",
     "switch": "git branch -D gh-pages && git branch gh-pages && git checkout gh-pages",
     "publish": "npm run build && npm run push && npm run switch",
     "wrap": "git subtree push --prefix=_book origin gh-pages"
