--- a/docs/package.json
+++ b/docs/package.json
@@ -13,11 +13,13 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "gitbook serve ./ ./docs",
     "build": "gitbook build ./ ./docs",
-    "push": "git add . && git commit -m \"update\" && git push origin master",
-    "create": "git branch gh-pages",
-    "switch": "git branch -D gh-pages && git checkout -b gh-pages",
-    "publish": "npm run build && npm run push && npm run switch",
+    "push:m": "git add . && git commit -m \"update\" && git push origin master",
+    "push:g": "git add . && git commit -m \"update\" && git push origin gh—pages",
+    "create:g": "git branch gh-pages",
+    "switch:g": "git branch -D gh-pages && git checkout -b gh-pages",
+    "start": "npm run build && npm run push:m && npm run switch:g",
     "wrap": "git subtree push --prefix=_book origin gh-pages"
   },
   "repository": {
