--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "gitbook serve ./ ./docs",
     "build": "gitbook build ./ ./docs",
-    "push:m": "git add . && git commit -m \"update\" && git push origin master",
+    "push:m": "git add . && git commit -m \"update\" && git push origin master -f",
     "push:g": "git add . && git commit -m \"update\" && git push origin gh—pages",
     "create:g": "git branch gh-pages",
     "switch:g": "git branch -D gh-pages && git checkout -b gh-pages",
